--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>D'Wills</title>
-    <link rel="stylesheet" href="assets/bubbles/style.css">
-    <link rel="stylesheet" href="assets/base.css">
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -43,7 +43,7 @@
     		
     	</nav>
     </footer>
-    <script src="assets/bubbles/script.js"></script>
-    <script src="assets/app.js"></script>
+    <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
