--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     			</div>
     		</div>
     		<div class="img">
-    			<img src="assets/images/test.png" alt="donation image" />
+    			<img src="test.png" alt="donation image" />
     		</div>
     	</div>
     </main>
